--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         
         <p style="text-align:center;color: white;">Thank You For Visiting</p><br><br>
     
-        <p style="text-align:center;color: white;" >This Website Was Developped By Shiva ,Tejas ,Srikanth....</p><br><br>
+        <p style="text-align:center;color: white;" >This Website Was Developped By tejassu....</p><br><br>
         <p style="text-align:center;color: white;"> &copy; 2021 All Rights Reserved</p>
         <br>
         <hr style="border-color:white;">
